Supporting more frameworks

--- a/ZstdNet/ZstdNet.csproj
+++ b/ZstdNet/ZstdNet.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<Version>1.4.5</Version>
-		<TargetFrameworks>net45;netstandard2.0;netstandard2.1</TargetFrameworks>
+		<TargetFrameworks>net45;net472;net481;netstandard2.0;netstandard2.1;net6.0;net8.0</TargetFrameworks>
 		<Title>ZstdNet</Title>
 		<PackageId>ZstdNet</PackageId>
 		<Company>SKB Kontur</Company>
@@ -30,7 +30,7 @@
 		<None Include="build\**\*" Pack="true" PackagePath="build\" />
 		<None Include="..\LICENSE" Pack="true" PackagePath="lib\" />
 	</ItemGroup>
-	<ItemGroup Condition="'$(TargetFramework)' == 'net45' OR '$(TargetFramework)' == 'netstandard2.0'">
+	<ItemGroup Condition="'$(TargetFramework)' == 'net45' OR '$(TargetFramework)' == 'net472' OR '$(TargetFramework)' == 'net481' OR '$(TargetFramework)' == 'netstandard2.0'">
 		<PackageReference Include="System.Memory" Version="4.*" />
 	</ItemGroup>
 </Project>
