--- a/ZstdNet.Benchmarks/ZstdNet.Benchmarks.csproj
+++ b/ZstdNet.Benchmarks/ZstdNet.Benchmarks.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net48;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net481;net8.0</TargetFrameworks>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <LangVersion>8.0</LangVersion>
   </PropertyGroup>
